--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+html{
+    scroll-behavior: smooth;
+}
 p{
     font-weight: 300;
     color: #111;
