--- a/style.css
+++ b/style.css
@@ -426,60 +426,9 @@ ul {
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 }
-/* 
-.single_feature:hover,
-.single_feature:focus,
-.single_feature:active {
-  color: white;
-}
-.single_feature:hover:before,
-.single_feature:focus:before,
-.single_feature:active:before {
-  -webkit-transform: scaleY(1);
-  transform: scaleY(1);
-}
 
-.single_feature i {
-  border: 1px solid #e8e8e9;
-  border-radius: 50%;
-  color: #333;
-  float: left;
-  font-size: 20px;
-  height: 60px;
-  line-height: 60px;
-  margin-right: 15px;
-  position: relative;
-  text-align: center;
-  transition: all 0.3s ease 0s;
-  width: 60px;
-  z-index: 3;
-  margin-top: 25px;
+.services:hover{
+    color: #00cc66;
+    cursor: pointer;
 }
-.single_feature:hover i {
-  background: #fff;
-  border: 1px solid #fff;
-  color: #0b0861;
-}
-.single_feature h3 {
-  text-transform: capitalize;
-  font-size: 20px;
-  font-weight: 400;
-  margin-top: 0px;
-  overflow: hidden;
-}
-.single_feature:hover h3 {
-  color: #fff;
-}
-.single_feature span {
-  border-bottom: 1px dashed #ccc;
-  display: block;
-  margin: 15px auto 10px;
-  width: 80px;
-}
-.single_feature p {
-  margin-bottom: 0;
-  overflow: hidden;
-} */
-
-
 /*service section end*/
